--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "vue3-spa-version-update-confirmation2",
+  "name": "vue3-spa-version-update-confirmation",
   "private": true,
   "version": "0.0.1",
   "scripts": {
@@ -8,6 +8,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^0.27.2",
     "mosha-vue-toastify": "^1.0.23",
     "pinia": "^2.0.14",
     "vue": "^3.2.25",
